// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GridGenerator ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-16oepvt-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-d9gti8-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-yblnas-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1j5c1n0-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-m09luf-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-d9gti8-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-yblnas-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1j5c1n0-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-m09luf-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-16oepvt-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-d9gti8-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-yblnas-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1j5c1n0-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-m09luf-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridGenerator ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-16oepvt-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-d9gti8-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-16xra3p-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-16mc4nl-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-d9gti8-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-16xra3p-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-16mc4nl-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-16oepvt-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-d9gti8-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-16xra3p-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-16mc4nl-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridGenerator ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-16oepvt-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-d9gti8-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-742zqy-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-101f3a2-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-d9gti8-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-742zqy-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-101f3a2-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-16oepvt-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-d9gti8-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-742zqy-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-101f3a2-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GridGenerator ENCOURAGE_E4S theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-16oepvt-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-wgis05-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-jayakb-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-wgxiy8-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1lw3bb-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-x4ya5x-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-wgis05-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-jayakb-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-wgxiy8-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1lw3bb-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-x4ya5x-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4 css-16oepvt-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true css-wgis05-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-jayakb-MuiFormControl-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined css-wgxiy8-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl css-1lw3bb-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInputBase-input MuiInput-input css-x4ya5x-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
